Added another reference.

--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -62,3 +62,18 @@
    Address      = {Berlin, Germany}
 }
 
+
+
+@inproceedings{Valero:2020:isarc,
+    doi = {10.22260/ISARC2020/0033},
+    year = 2020,
+    month = {October},
+    author = {Valero, Enrique and Mohanty, Dibya D. and Bosche, Frederic},
+    title = {Development of an Open-source Scan+BIM Platform},
+    booktitle = {Proceedings of the 37th International Symposium on Automation and Robotics in Construction (ISARC)},
+    isbn = {978-952-94-3634-7},
+    publisher = {International Association for Automation and Robotics in Construction (IAARC)},
+    editor = {"Osumi, Hisashi", "Furuya, Hiroshi", "Tateyama, Kazuyoshi"},
+    pages = {223-232},
+    address = {Kitakyushu, Japan}
+}
