Small improvements to paper's text, references

--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -53,7 +53,7 @@
 
 
 
-@inproceedings{Hecht:2019:fbi,
+@inproceedings{Hecht:2019:FBI,
    Author       = {Hecht, Helge and Jaud, {\v{S}}tefan},
    Title        = {TUM OpenInfraPlatform: The Open-Source BIM Visualisation Software},
    Booktitle    = {Proc. of the 31st Forum Bauinformatik},
@@ -64,7 +64,7 @@
 
 
 
-@inproceedings{Valero:2020:isarc,
+@inproceedings{Valero:2020:ISARC,
     doi = {10.22260/ISARC2020/0033},
     year = 2020,
     month = {October},
