Add reference to dissertation. Counted code lines. Cleaned up affilation

--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -53,6 +53,18 @@
 
 
 
+@phdthesis {Amann:2018:Diss,
+	author = "Amann, Julian",
+	title = "Eine objektorientierte Sprache zur Einbettung von Interpretationssemantik in digitale Bauwerksmodelle",
+	type = "Dissertation",
+	school = "Technische Universität München",
+	address = "München",
+	year = 2018,
+	keywords = "BIM, Building Information Model, Building Information Modelling, Bauwerksinformationsmodell, IFC, Industry Foundation Classes"
+}
+
+
+
 @inproceedings{Hecht:2019:FBI,
    Author       = {Hecht, Helge and Jaud, {\v{S}}tefan},
    Title        = {TUM OpenInfraPlatform: The Open-Source BIM Visualisation Software},
