--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -57,7 +57,7 @@
 	author = "Amann, Julian",
 	title = "Eine objektorientierte Sprache zur Einbettung von Interpretationssemantik in digitale Bauwerksmodelle",
 	type = "Dissertation",
-	school = "Technische Universität München",
+	school = "Technische Universit\"{a}t M\"{u}nchen",
 	address = "München",
 	year = 2018,
 	keywords = "BIM, Building Information Model, Building Information Modelling, Bauwerksinformationsmodell, IFC, Industry Foundation Classes"
