--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -58,7 +58,7 @@
 	title = "Eine objektorientierte Sprache zur Einbettung von Interpretationssemantik in digitale Bauwerksmodelle",
 	type = "Dissertation",
 	school = "Technische Universit\"{a}t M\"{u}nchen",
-	address = "München",
+	address = "M\"{u}nchen",
 	year = 2018,
 	keywords = "BIM, Building Information Model, Building Information Modelling, Bauwerksinformationsmodell, IFC, Industry Foundation Classes"
 }
