--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -54,13 +54,13 @@
 
 
 @phdthesis {Amann:2018:Diss,
-	author = "Amann, Julian",
-	title = "Eine objektorientierte Sprache zur Einbettung von Interpretationssemantik in digitale Bauwerksmodelle",
-	type = "Dissertation",
-	school = "Technische Universit\"{a}t M\"{u}nchen",
-	address = "M\"{u}nchen",
-	year = 2018,
-	keywords = "BIM, Building Information Model, Building Information Modelling, Bauwerksinformationsmodell, IFC, Industry Foundation Classes"
+	author = {Amann, J.},
+	title = {An object-oriented language for embedding interpretation semantics in digital building models},
+	type = {Dissertation},
+	school = {Technische Universit\"{a}t M\"{u}nchen},
+	address = {M\"{u}nchen},
+	Year = {2018},
+	keywords = {BIM, Building Information Model, Building Information Modelling, Bauwerksinformationsmodell, IFC, Industry Foundation Classes}
 }
 
 
