filling joss paper with content, added a picture

--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -51,6 +51,33 @@
     doi          = {10.1061/(ASCE)CP.1943-5487.0000592}
 }
 
+@misc{CloudCompare,
+ title = {Cloud Compare Wiki},
+ year = {2016},
+ url = {https://www.cloudcompare.org/doc/wiki},
+ note = {Accessed: 2021-02-14}
+}
+
+
+@inbook{vilgertshofer:2017:iwcce,
+    author = {S. Vilgertshofer and J. Amann and B. Willenborg and A. Borrmann and T. H. Kolbe },
+    title = {Linking BIM and GIS Models in Infrastructure by Example of IFC and CityGML},
+    booktitle = {Computing in Civil Engineering 2017},
+    pages = {133-140},
+    doi = {10.1061/9780784480823.017},
+    URL = {https://ascelibrary.org/doi/abs/10.1061/9780784480823.017},
+    eprint = {https://ascelibrary.org/doi/pdf/10.1061/9780784480823.017},
+    abstract = { This paper demonstrates how linked data can be used to provide a semantically rich connection between the domains of building information modeling (BIM) and geographic information systems (GIS). Expertise from both domains is necessary for the planning of infrastructure projects such as roads, tunnels, bridges, and railways, as these projects usually require the consideration of widely diverging scales. As BIM and GIS rely on different types of data modeling standards, a conversion between the data models will inevitably result in data loss. To overcome this problem, we propose to utilize the concept of Linked Data which allows the original data to coexist and provide coherence by establishing references between the corresponding entities of both standards. The approach is illustrated using exemplary models of shield tunnels in both, the IFC and the CityGML format. }
+}
+
+@techreport{Hecht:2018:PCdtoAlignment,
+  author    = {Helge Hecht},
+  type = {Report},
+  title     = {From Point Cloud Data to IfcAlignment},
+  pages     = {26 pp.},
+  year      = {2018},
+  url = {https://www.cms.bgu.tum.de/images/teaching/abim_seminar/Report_Hecht_From_Point_Cloud_to_IfcAlignment.pdf}
+}
 
 
 @phdthesis {Amann:2018:Diss,
@@ -61,6 +88,43 @@
 	address = {M\"{u}nchen},
 	Year = {2018},
 	keywords = {BIM, Building Information Model, Building Information Modelling, Bauwerksinformationsmodell, IFC, Industry Foundation Classes}
+}
+
+@techreport{Beetz:2019:linkeddata,
+  author    = {Jakob Beetz and Julian Amann and Andr{\'{e}} Borrmann},
+  type = {Report},
+  title     = {Linked Data - Analyse von Einsatzm{\"o}glichkeiten von verbundenen Informationen (Linked Data) und Ontologien und damit befassten Technologien (Semantic Web) im Bereich des Stra{\"s}enwesens},
+  institution = {Sonstige},
+  pages     = {82 pp.},
+  year      = {2019},
+  url = {https://bast.opus.hbz-nrw.de/opus45-bast/frontdoor/deliver/index/docId/2181/file/LinkedData_Schlussbericht_01.0195.pdf}
+}
+
+@incollection{Jaud:2019:iccce,
+   author = {Jaud, {\v{S}}tefan and Donaubauer, Andreas and Borrmann, Andr{\'{e}}},
+   booktitle = {Computing in Civil Engineering 2019: Visualisation, Information Modelling, and Simulation},
+   institution = {TUM BGU CMS},
+   address = {Atlanta, Georgia, USA},
+   title = {{Georeferencing within IFC: A Novel Approach for Infrastructure Objects}},
+   year = {2019},
+   pages = {377--384},
+   url={https://publications.cms.bgu.tum.de/2019_Jaud_I3CE.pdf},
+   editor = {Yong K. Cho  and Fernanda Leite  and Amir Behzadan  and Chao Wang },
+   publisher = {American Society of Civil Engineers},
+   doi = {10.1061/9780784482421},
+}
+
+% ISO 16739
+@techreport{iso16739,
+    type = {Standard},
+    key = {ISO 16739-1:2018},
+    month = {nov},
+    year = {2018},
+    title = {{Industry Foundation Classes (IFC) for data sharing in the construction and facility management industries -- Part 1: Data schema}},
+    volume = {2018},
+    address = {Geneva, CH},
+    institution = {International Organization for Standardization},
+    url = {https://www.iso.org/standard/70303.html}
 }
 
 
@@ -88,4 +152,17 @@
     editor = {"Osumi, Hisashi", "Furuya, Hiroshi", "Tateyama, Kazuyoshi"},
     pages = {223-232},
     address = {Kitakyushu, Japan}
+}
+
+
+@inproceedings{Jaud:2020:siBIM,
+   title={{DEVELOPMENT OF IFC SCHEMA FOR INFRASTRUCTURE}},
+   author={Jaud, {\v{S}}tefan and Esser, Sebastian and Muhi{\v{c}}, Sergej and Borrmann, Andr\'{e}},
+   year={2020},
+   month={Nov},
+   yearmonth={2020-11},
+   url={https://publications.cms.bgu.tum.de/2020_Jaud_siBIM.pdf},
+   booktitle={Proceedings of 6th international conference siBIM: Structured data is the new gold},
+   location={online},
+   pages={27--35}
 }
