--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -64,6 +64,7 @@
     title = {Linking BIM and GIS Models in Infrastructure by Example of IFC and CityGML},
     booktitle = {Computing in Civil Engineering 2017},
     pages = {133-140},
+    year = {2017},
     doi = {10.1061/9780784480823.017},
     URL = {https://ascelibrary.org/doi/abs/10.1061/9780784480823.017},
     eprint = {https://ascelibrary.org/doi/pdf/10.1061/9780784480823.017},
