including comments from vertexwahn

--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -79,6 +79,17 @@
   year      = {2018},
   url = {https://www.cms.bgu.tum.de/images/teaching/abim_seminar/Report_Hecht_From_Point_Cloud_to_IfcAlignment.pdf}
 }
+  
+
+@incollection{Amann:2018:Programming,
+  Author       = {Amann, J. and Preidel, C. and Tauscher, E. and Borrmann, A.},
+  Editor       = {Borrmann, A. and K{\"o}nig, M. and Koch, C. and Beetz, J.},
+  Publisher    = {Springer},
+  Booktitle    = {Building Information Modeling},
+  Title        = {BIM Programming},
+  Year         = {2018}
+}
+
 
 
 @phdthesis {Amann:2018:Diss,
