including intro from vertexwahn

--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -1,5 +1,11 @@
 
-    
+@inproceedings{Amann:2014:ECPPM,
+  author = {Amann, J. and Flurl, M. and Jubierre, J. R. and Borrmann, A.},
+  title = {An alignment meta-model for the comparison of alignment product models},
+  booktitle = {Proc. of the 10th European Conference on Product & Process Modelling},
+  year = {2014},
+  month = {Sep}
+}
 
 @inproceedings{Singer:2014:IfcAlignment,
     Author       = {Singer, D. and Amann, J.},
