Better reference for xbim.

--- a/Documentation/joss/paper.bib
+++ b/Documentation/joss/paper.bib
@@ -117,11 +117,17 @@
  note = {Accessed: 2021-03-17}
 }
 
-@misc{xbim,
- title = {xbim toolkit},
- year = {2021},
- url = {https://docs.xbim.net/},
- note = {Accessed: 2021-03-17}
+@article{Lockley2017,
+  doi = {10.21105/joss.00473},
+  url = {https://doi.org/10.21105/joss.00473},
+  year = {2017},
+  publisher = {The Open Journal},
+  volume = {2},
+  number = {20},
+  pages = {473},
+  author = {Steve Lockley and Claudio Benghi and Martin Černý},
+  title = {Xbim.Essentials: a library for interoperable building information applications},
+  journal = {Journal of Open Source Software}
 }
 
 @misc{blender,
