Update authors in oip.bib file

--- a/Documentation/oip.bib
+++ b/Documentation/oip.bib
@@ -6,7 +6,7 @@
   volume = {7},
   number = {72},
   pages = {3061},
-  author = {Štefan Jaud and Helge Hecht and Jonas Schlenger and Julian Amann},
+  author = {Jaud, {\v{S}}tefan and Hecht, Helge and Schlenger, Jonas and Amann, Julian},
   title = {TUM Open Infra Platform: an open source package for simultaneous viewing and analysis of digital models in the civil engineering domain},
   journal = {Journal of Open Source Software}
 }
