--- a/Documentation/oip.bib
+++ b/Documentation/oip.bib
@@ -1,9 +1,12 @@
-﻿@misc{Amann.2016,
- author = {Amann, Julian and Sch{\"o}ttl, Fabian and Singer, Dominic and Kern, Michael and Widner, Alexander and Geisler, Patrick and Below, Daniel and Hecht, Helge and Gupta, Nishant and Mustafa, Ahmed and Borrmann, Andr{\'e}},
- year = {2016},
- title = {TUM Open Infra Platform 2016},
- url = {https://www.cms.bgu.tum.de/oip},
- address = {M{\"u}nchen},
- urldate = {08.02.2016},
- publisher = {Technische Universit{\"a}t M{\"u}nchen, Lehrstuhl f{\"u}r Computergest{\"u}tzte Modellierung und Simulation}
+﻿@article{Jaud2022,
+  doi = {10.21105/joss.03061},
+  url = {https://doi.org/10.21105/joss.03061},
+  year = {2022},
+  publisher = {The Open Journal},
+  volume = {7},
+  number = {72},
+  pages = {3061},
+  author = {Jaud, {\v{S}}tefan and Hecht, Helge and Schlenger, Jonas and Amann, Julian},
+  title = {TUM Open Infra Platform: an open source package for simultaneous viewing and analysis of digital models in the civil engineering domain},
+  journal = {Journal of Open Source Software}
 }
